Define Github link in Documentation.html

--- a/Documentation.html
+++ b/Documentation.html
@@ -2226,8 +2226,7 @@ See the GNU General Public License for more details.
 			<div class="article-inner">
 
 				<div>
-Website:<br>
-http://github.........
+Github: <a href="https://github.com/christopheleblanc/phpsa">https://github.com/christopheleblanc/phpsa</a>
 				</div>
 
 			</div>
