--- a/Documentation.html
+++ b/Documentation.html
@@ -299,6 +299,26 @@ of your choice.
 <span class="bold">From sources:</span> Download/copy the program directory to the location 
 of your choice.
 				</p>
+				<p>
+Depending on your installation method, you may need to create the following directories used to store 
+config, logs and temp files:
+				</p>
+				<div>
+					<div>/data</div>
+					<div>/data/config</div>
+					<div>/data/logs</div>
+					<div>/data/output</div>
+					<div>/data/tmp</div>
+					<div>/data/tmp/files</div>
+					<div>/data/tmp/out</div>
+					<div>/data/tmp/state</div>
+				</div>
+				<p class="italic">
+Note: Temporary files directory can be modified in configuration file.
+				</p>
+				<p>
+<span class="bold">Requires PHP 7.0 and higher</span>
+				</p>
 			</div>
 		</article>
 
